Imported Upstream version 3.0.3

--- a/docs/glade2script-gtk2.1
+++ b/docs/glade2script-gtk2.1
@@ -20,7 +20,7 @@ system was added to extend G2S capability.
 Documentation, many examples, and an interface giving access to the
 archive supports (simply install and run glade2script-doc).
 .br
-Glade2script is already used by several softwares, such as Boot-Repair,
+Glade2script is already used by several software, such as Boot-Repair,
 OS-Uninstaller, Debeditor, DeskWall, GUnity, LaunchBash, Malokal,
 mkv_extractor_gui, Screencastor, Sylaba2, Xee, Zenitor.
 .br
